--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,3 +86,33 @@ jobs:
         with:
           name: test_artifacts
           path: tests/_output
+      
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+            username: ${{ secrets.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build
+        uses: docker/build-push-action@v2
+        with:
+            context: .
+            file: ./.docker/Dockerfile
+            load: true
+            platforms: linux/amd64
+            tags: |
+                hunt3r03/bagisto:latest
+                cache-from: type=registry,ref=hunt3r03/bagisto:latest
+                cache-to: type=inline
+      - name: Docker images list
+        run: |
+           sudo docker image list
+      - name: Push to Docker Hub Registry
+        run: |
+           docker push hunt3r03/bagisto:latest
+   
